# pulseguard

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  go.mod  main.py  pyproject.toml  setup-hooks.sh
.githooks/: pre-commit
.github/workflows/: workflow.yml
cmd/pulseguard/: main.go
core/auth/: auth.go  auth_test.go
core/password/: password.go  password_test.go
core/storage/: storage.go  storage_test.go
core/tui/: tui.go  tui_test.go
docs/: README.md
src/pulseguard/: __init__.py  __main__.py  auth.py  cli.py  cli_helpers.py  cli_operations.py  commands.py  config.py  console.py  crypto.py  messages.py  models.py  operations.py  passwordgen.py  ui.py  vault.py
src/pulseguard/tui/: __init__.py  actions.py  app.py  panels.py  theme.py
tests/: README.md  conftest.py  test_auth.py  test_cli.py  test_commands.py  test_console.py  test_crypto.py  test_encrypted_vault.py  test_functional_encryption.py  test_functional_integration.py  test_functional_vault.py  test_main.py  test_operations.py  test_package.py  test_passwordgen.py  test_simple.py
tests/e2e/: test_workflows.py
tests/integration/: test_app_functional.py  test_vault.py
tests/tui/: test_actions.py  test_app.py  test_panels.py  test_theme.py
tests/unit/: test_crypto.py  test_passwordgen.py
