[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pulseguard"
version = "0.1.0"
description = "PulseGuard terminal password manager"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "PulseGuard Maintainers" }
]
dependencies = [
    "cryptography>=41.0.0",
    "argon2-cffi>=23.1.0",
    "pyperclip>=1.8.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
dev = [
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "types-pyperclip"
]

[project.scripts]
pulseguard = "pulseguard.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/pulseguard"]
omit = ["*/tests/*", "*/__pycache__/*"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__\\.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Allow long lines (black will handle code formatting)
