[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/.githooks",
    "/.gitlab-ci.yml",
    "/docs",
    "/tests",
    "/.venv",
    "/.git",
    "/.gitignore",
    "/htmlcov",
    "/.coverage",
    "/setup-hooks.sh",
    "*.pyc",
    "__pycache__",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pulseguard"]

[project]
name = "pulseguard"
version = "0.5.1"
description = "Secure terminal-based password manager with encryption and interactive CLI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    { name = "KazeTachinuu" }
]
keywords = [
    "password-manager",
    "security",
    "encryption",
    "cli",
    "terminal",
    "vault",
    "credentials",
    "argon2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=41.0.0",
    "argon2-cffi>=23.1.0",
    "pyperclip>=1.8.2",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "questionary>=2.0.0",
    "inquirer>=3.4.0",
]

[project.urls]
Repository = "https://github.com/KazeTachinuu/pulseguard"
Issues = "https://github.com/KazeTachinuu/pulseguard/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
dev = [
    "black>=25.9.0",
    "ruff>=0.13.1",
    "mypy>=1.0",
    "types-pyperclip",
]

[project.scripts]
pulseguard = "pulseguard.cli:main"

[dependency-groups]
dev = [
    "twine>=6.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"

markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]

[tool.coverage.run]
source = ["src/pulseguard"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/cli.py",
    "*/cli_helpers.py",
    "*/cli_operations.py",
    "*/ui.py",
    "*/__main__.py",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 69

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__\\.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Allow long lines (black will handle code formatting)
